# Agents

./: main.ipynb  pyproject.toml
agents-samples/: first-chatbot-agent.ipynb  getWeather-function-agent.ipynb
chatgpt-clone/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  dummy-agent.ipynb  pyproject.toml
content-pipeline-agent/: main.py  seo_crew.py
deep-research-clone/: email-optimizer-team.ipynb  tools.py
deep-research-clone/.ipynb_checkpoints/: email-optimizer-team-checkpoint.ipynb
job-hunter-agent/: main.py  models.py
job-hunter-agent/knowledge/: resume.txt
job-hunter-agent/output/: company_research.md  interview_prep.md  rewritten_resume.md
news-reader-agent/: README.md  main.py  tools.py
news-reader-agent/config/: agents.yaml  tasks.yaml
news-reader-agent/output/: content_harvest.md  final_report.md  summary.md
