[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "firecrawl>=4.3.6",
    "firecrawl-py>=4.3.6",
    "notebook>=7.4.6",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "crewai[tools]>=0.152.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
